--- a/5CookBook/pom.xml
+++ b/5CookBook/pom.xml
@@ -3,4 +3,13 @@
   <groupId>com.GLNT</groupId>
   <artifactId>5CookBook</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+  </dependencies>
 </project>
