--- a/5CookBook/src/main/resources/project.properties
+++ b/5CookBook/src/main/resources/project.properties
@@ -1,11 +1,11 @@
-# Datasource properties
+# DataSource settings: set here your own configurations for the database connection
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/cookbookproject?serverTimezone=UTC
 hibernate.connection.username=root
 hibernate.connection.password=JEfaisdestables8!
 
 # Hibernate settings
-hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
 hibernate.format_sql=true
