--- a/5CookBook/src/main/resources/project.properties
+++ b/5CookBook/src/main/resources/project.properties
@@ -2,7 +2,7 @@
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/cookbookproject?serverTimezone=UTC
 hibernate.connection.username=root
-hibernate.connection.password=JEfaisdestables8!
+hibernate.connection.password=**** // to change
 
 # Hibernate settings
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
