--- a/5CookBook/pom.xml
+++ b/5CookBook/pom.xml
@@ -56,7 +56,7 @@
 		</dependency>
 
 		<!-- Spring JDBC -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
@@ -65,7 +65,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 </project>
